--- a/configs/config_sample.yaml
+++ b/configs/config_sample.yaml
@@ -21,5 +21,10 @@ opcua:
     sub_interval: 10         # Subcription Interval in Seconds           
     nodeids:                 # List of Node IDs
       - i=2258
-exporters:                   # Work in Progress
+exporters:                   # Map Struct of Exporters - Work in Progress
   timescale-db:
+    host: hostname
+    port: 5432
+    username: username
+    password: password
+    database: database
