feat: updated interface to add exporters in an easier manner

--- a/configs/config_sample.yaml
+++ b/configs/config_sample.yaml
@@ -28,3 +28,4 @@ exporters:                   # Map Struct of Exporters - Work in Progress
     username: username
     password: password
     database: database
+    table: gualogger
